--- a/content/create_action.html
+++ b/content/create_action.html
@@ -1,5 +1,34 @@
 
-<html><head></head><body><h1 id="create-an-action">Create An Action</h1>
+<html><head></head><body><ul>
+<li><a href="#create-an-action">Create An Action</a><ul>
+<li><a href="#basic-example">Basic Example</a></li>
+<li><a href="#usage">Usage</a><ul>
+<li><a href="#accessor">Accessor</a><ul>
+<li><a href="#string"><code>String</code></a></li>
+<li><a href="#array"><code>Array</code></a></li>
+<li><a href="#function"><code>Function</code></a></li>
+</ul>
+</li>
+<li><a href="#response">Response</a><ul>
+<li><a href="#string-1"><code>String</code></a></li>
+<li><a href="#function-1"><code>Function</code></a></li>
+</ul>
+</li>
+<li><a href="#description-optional">Description (Optional)</a></li>
+</ul>
+</li>
+<li><a href="#examples">Examples</a><ul>
+<li><a href="#string-accessor--string-response">String Accessor &amp; String Response</a></li>
+<li><a href="#array-accessor">Array Accessor</a></li>
+<li><a href="#function-accessor">Function Accessor</a></li>
+<li><a href="#function-response">Function Response</a></li>
+</ul>
+</li>
+<li><a href="#testing">Testing</a></li>
+</ul>
+</li>
+</ul>
+<h1 id="create-an-action">Create An Action</h1>
 <hr />
 <p>Discordia actions are created using the <a href="https://github.com/mfasman95/discordia/tree/master/packages/action">@discordia/action</a> module.</p>
 <pre><code class="bash"># install the module using npm
@@ -49,10 +78,87 @@ const pingAction = new DiscordiaAction('ping', 'pong');</code></pre>
 <h4 id="function"><code>Function</code></h4>
 <p>If the accessor is a function that returns true when provided with <code>userAction</code>, <code>msg</code>, and <code>client</code> then <a href="api#DiscordiaAction.handleAction">handleAction</a> for this action will be called.</p>
 <h3 id="response">Response</h3>
-<p>The response is how the Discordia framework responds to a user that tries to interact with the bot it creates. Once <a href="api#DiscordiaAction.handleAction">handleAction</a> is called</p>
-<h3 id="description">Description</h3>
+<p>The response is how the Discordia framework responds to a user that tries to interact with the bot it creates. Once <a href="api#DiscordiaAction.handleAction">handleAction</a> is called it will determine how to respond to the user based on the type of the response. The <a href="api#DiscordiaAction.handleAction">handleAction</a> method is given three parameters:</p>
+<table>
+<thead>
+<tr>
+<th>Parameter</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody><tr>
+<td><code>msg</code></td>
+<td>The full <a href="https://discord.js.org/#/docs/main/stable/class/Message">Message object</a> that contains <code>userAction</code> and <code>userArgs</code> in its <code>content</code></td>
+</tr>
+<tr>
+<td><code>userArgs</code></td>
+<td>Everything in side the <code>msg.content</code> field after <code>userAction</code> as an array</td>
+</tr>
+<tr>
+<td><code>client</code></td>
+<td>The full <a href="https://discord.js.org/#/docs/main/stable/class/Client">Client object</a> used by the Discordia framework - USE WITH CAUTION</td>
+</tr>
+</tbody></table>
+<h4 id="string"><code>String</code></h4>
+<p>If the response is a string then <a href="https://discord.js.org/#/docs/main/stable/class/Message?scrollTo=reply">msg.reply</a> is called with response as the <code>content</code> parameter.</p>
+<h4 id="function"><code>Function</code></h4>
+<p>If the response is a function then that function will be called with <code>msg</code>, <code>userArgs</code>, and <code>client</code> as parameters. If the function returns a string then <a href="https://discord.js.org/#/docs/main/stable/class/Message?scrollTo=reply">msg.reply</a> is called with the result of that function as the <code>content</code> parameter.</p>
+<h3 id="description--optional-">Description (Optional)</h3>
+<p>Description is an optional parameter that must be a string used to enable a <code>help</code> (or <code>h</code>) action on the Discordia framework. By default the discordia framework will attempt to supply usage information to server members who ask the bot created by the Discordia framework for help.</p>
+<pre><code class="js">// Default Behavior
+`-------------------------
+**Command**: \`${accessor}\`
+
+${description}`</code></pre>
+<p>Accessor is formatted based on its type to show the available options (with "{Dynamic Accessor}" sent if the accessor is a function). The description is the exact contents of the description parameter given to the Discordia action constructor.</p>
+<p>If description is ommitted or set to <code>null</code> then it will be left off when the the help action is triggered.</p>
+<p>The behavior of the help command can be overriden - see the <a href="api#DiscordiaFramework">Discordia Framework constructor</a>.</p>
 <h2 id="examples">Examples</h2>
 <hr />
-<h2 id="testing">Testing</h2>
+<h3 id="string-accessor---string-response">String Accessor &amp; String Response</h3>
+<pre><code class="js">const DiscordiaAction = require('@discordia/action');
+
+const pingAction = new DiscordiaAction('ping', 'pong');</code></pre>
+<pre><code># Conversation Example(s) #
+
+User: @BotName ping
+BotName: @User, pong</code></pre><h3 id="array-accessor">Array Accessor</h3>
+<pre><code class="js">const DiscordiaAction = require('@discordia/action');
+
+const pingAction = new DiscordiaAction(['oof', 'ow', 'ouch'], 'rekt');</code></pre>
+<pre><code># Conversation Example(s) #
+
+User: @BotName oof
+BotName: @User, rekt
+---
+User: @BotName ow
+BotName: @User, rekt
+---
+User: @BotName ouch
+BotName: @User, rekt</code></pre><h3 id="function-accessor">Function Accessor</h3>
+<pre><code class="js">const DiscordiaAction = require('@discordia/action');
+
+const accessor = (userAction, msg, client) =&gt; {
+  if (msg.content.includes('potato')) {
+    return true;
+  }
+  return false;
+};
+const pingAction = new DiscordiaAction(accessor, 'delicious');</code></pre>
+<pre><code># Conversation Example(s) #
+
+User: @BotName Do you like potatoes?
+BotName: @User, delicious</code></pre><h3 id="function-response">Function Response</h3>
+<pre><code class="js">const DiscordiaAction = require('@discordia/action');
+
+const response = (msg, userArgs, client) =&gt; {
+  return `here is a joke for ${msg.author.username}: ${generateJoke()}`;
+};
+const pingAction = new DiscordiaAction('joke', response);</code></pre>
+<pre><code># Conversation Example(s) #
+
+User: @BotName joke
+BotName: @User, here is a joke for User: {something funny}</code></pre><h2 id="testing">Testing</h2>
 <hr />
+<p>🚧 Coming Soon! 🚧</p>
 </body></html>
