--- a/content/create_action.html
+++ b/content/create_action.html
@@ -3,18 +3,9 @@
 <li><a href="#create-an-action">Create An Action</a><ul>
 <li><a href="#basic-example">Basic Example</a></li>
 <li><a href="#usage">Usage</a><ul>
-<li><a href="#accessor">Accessor</a><ul>
-<li><a href="#string"><code>String</code></a></li>
-<li><a href="#array"><code>Array</code></a></li>
-<li><a href="#function"><code>Function</code></a></li>
-</ul>
-</li>
-<li><a href="#response">Response</a><ul>
-<li><a href="#string-1"><code>String</code></a></li>
-<li><a href="#function-1"><code>Function</code></a></li>
-</ul>
-</li>
-<li><a href="#description-optional">Description (Optional)</a></li>
+<li><a href="#accessor">Accessor</a></li>
+<li><a href="#response">Response</a></li>
+<li><a href="#description">Description</a></li>
 </ul>
 </li>
 <li><a href="#examples">Examples</a><ul>
@@ -71,11 +62,11 @@ const pingAction = new DiscordiaAction('ping', 'pong');</code></pre>
 <td>The full <a href="https://discord.js.org/#/docs/main/stable/class/Client">Client object</a> used by the Discordia framework - USE WITH CAUTION</td>
 </tr>
 </tbody></table>
-<h4 id="string"><code>String</code></h4>
-<p>If the accessor is a string and matches <code>userAction</code> exactly then <a href="api#DiscordiaAction.handleAction">handleAction</a> for this action will be called.</p>
-<h4 id="array"><code>Array</code></h4>
-<p>If the accessor is an array and any of its entries matches <code>userAction</code> exactly then <a href="api#DiscordiaAction.handleAction">handleAction</a> for this action will be called.</p>
-<h4 id="function"><code>Function</code></h4>
+<p><strong>String</strong>
+If the accessor is a string and matches <code>userAction</code> exactly then <a href="api#DiscordiaAction.handleAction">handleAction</a> for this action will be called.</p>
+<p><strong>Array</strong>
+If the accessor is an array and any of its entries matches <code>userAction</code> exactly then <a href="api#DiscordiaAction.handleAction">handleAction</a> for this action will be called.</p>
+<p><strong>Function</strong></p>
 <p>If the accessor is a function that returns true when provided with <code>userAction</code>, <code>msg</code>, and <code>client</code> then <a href="api#DiscordiaAction.handleAction">handleAction</a> for this action will be called.</p>
 <h3 id="response">Response</h3>
 <p>The response is how the Discordia framework responds to a user that tries to interact with the bot it creates. Once <a href="api#DiscordiaAction.handleAction">handleAction</a> is called it will determine how to respond to the user based on the type of the response. The <a href="api#DiscordiaAction.handleAction">handleAction</a> method is given three parameters:</p>
@@ -99,11 +90,11 @@ const pingAction = new DiscordiaAction('ping', 'pong');</code></pre>
 <td>The full <a href="https://discord.js.org/#/docs/main/stable/class/Client">Client object</a> used by the Discordia framework - USE WITH CAUTION</td>
 </tr>
 </tbody></table>
-<h4 id="string"><code>String</code></h4>
-<p>If the response is a string then <a href="https://discord.js.org/#/docs/main/stable/class/Message?scrollTo=reply">msg.reply</a> is called with response as the <code>content</code> parameter.</p>
-<h4 id="function"><code>Function</code></h4>
-<p>If the response is a function then that function will be called with <code>msg</code>, <code>userArgs</code>, and <code>client</code> as parameters. If the function returns a string then <a href="https://discord.js.org/#/docs/main/stable/class/Message?scrollTo=reply">msg.reply</a> is called with the result of that function as the <code>content</code> parameter.</p>
-<h3 id="description--optional-">Description (Optional)</h3>
+<p><strong>String</strong>
+If the response is a string then <a href="https://discord.js.org/#/docs/main/stable/class/Message?scrollTo=reply">msg.reply</a> is called with response as the <code>content</code> parameter.</p>
+<p><strong>Function</strong>
+If the response is a function then that function will be called with <code>msg</code>, <code>userArgs</code>, and <code>client</code> as parameters. If the function returns a string then <a href="https://discord.js.org/#/docs/main/stable/class/Message?scrollTo=reply">msg.reply</a> is called with the result of that function as the <code>content</code> parameter.</p>
+<h3 id="description">Description</h3>
 <p>Description is an optional parameter that must be a string used to enable a <code>help</code> (or <code>h</code>) action on the Discordia framework. By default the discordia framework will attempt to supply usage information to server members who ask the bot created by the Discordia framework for help.</p>
 <pre><code class="js">// Default Behavior
 `-------------------------
@@ -111,7 +102,7 @@ const pingAction = new DiscordiaAction('ping', 'pong');</code></pre>
 
 ${description}`</code></pre>
 <p>Accessor is formatted based on its type to show the available options (with "{Dynamic Accessor}" sent if the accessor is a function). The description is the exact contents of the description parameter given to the Discordia action constructor.</p>
-<p>If description is ommitted or set to <code>null</code> then it will be left off when the the help action is triggered.</p>
+<p>If description is ommitted or set to <code>null</code> then the whole action will be left off when the the help action is triggered.</p>
 <p>The behavior of the help command can be overriden - see the <a href="api#DiscordiaFramework">Discordia Framework constructor</a>.</p>
 <h2 id="examples">Examples</h2>
 <hr />
