--- a/create_an_action/index.html
+++ b/create_an_action/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta http-equiv="refresh" content="0; url=../" />
         <script>
-            sessionStorage.setItem('redirectPath', 'create_action/' + window.location.hash);
+            sessionStorage.setItem('redirectPath', 'create_an_action/' + window.location.hash);
         </script>
     </head>
 </html>
