deploy: f7c811f113f9572254fdd3c05c7ac8b2103b95a2

--- a/content/guide.html
+++ b/content/guide.html
@@ -4,4 +4,6 @@
 <blockquote>
 <p>Monorepo for the @discordia Discord bot framework</p>
 </blockquote>
+<p>See the <a href="https://mfasman95.github.io/discordia/">documentation site</a> for more info.</p>
+<p>🚧 Under Construction 🚧</p>
 </body></html>
