--- a/content/action.html
+++ b/content/action.html
@@ -1,6 +1,6 @@
 
 <html><head></head><body><ul>
-<li><a href="#create-an-action">Create An Action</a><ul>
+<li><a href="#installation">Installation</a></li>
 <li><a href="#basic-example">Basic Example</a></li>
 <li><a href="#usage">Usage</a><ul>
 <li><a href="#accessor">Accessor</a></li>
@@ -17,18 +17,18 @@
 </li>
 <li><a href="#testing">Testing</a></li>
 </ul>
-</li>
-</ul>
-<h1 id="create-an-action">Create An Action</h1>
+<blockquote>
+<p>Note: Some of the links in this README file work better on the <a href="https://mfasman95.github.io/discordia/">documentation site</a></p>
+</blockquote>
+<h1 id="installation">Installation</h1>
 <hr />
-<p>Discordia actions are created using the <a href="https://github.com/mfasman95/discordia/tree/master/packages/action">@discordia/action</a> module.</p>
 <pre><code class="bash"># install the module using npm
 npm install @discordia/action
 
 # install the module using yarn
 yarn add @discordia/action</code></pre>
 <p>Discordia actions are designed to be used with a Discordia framework instance. See the <a href="#testing">section on testing</a> below for details on how to validate your actions.</p>
-<h2 id="basic-example">Basic Example</h2>
+<h1 id="basic-example">Basic Example</h1>
 <hr />
 <pre><code class="js">const DiscordiaAction = require('@discordia/action');
 
@@ -36,10 +36,11 @@ const pingAction = new DiscordiaAction('ping', 'pong');</code></pre>
 <pre><code># Conversation Example(s)
 
 User: @BotName ping
-BotName: @User, pong</code></pre><h2 id="usage">Usage</h2>
+BotName: @User, pong</code></pre><h1 id="usage">Usage</h1>
 <hr />
 <p>Every Discordia action is made of three pieces: an accessor, a response, and an optional description.</p>
-<h3 id="accessor">Accessor</h3>
+<h2 id="accessor">Accessor</h2>
+<hr />
 <p>The accessor is how the Discordia framework determines whether or not this action should give its <a href="#response">response</a>. The Discordia framework calls the action's <a href="api#DiscordiaAction.checkAccessor">checkAccessor</a> method which in turn determines whether or not to call the action's <a href="api#DiscordiaAction.handleAction">handleAction</a> method based on the type of the accessor. The <a href="api#DiscordiaAction.checkAccessor">checkAccessor</a> method is given four parameters:</p>
 <table>
 <thead>
@@ -71,7 +72,8 @@ BotName: @User, pong</code></pre><h2 id="usage">Usage</h2>
 <p>If the accessor is an array and any of its entries matches <code>userAction</code> exactly then <a href="api#DiscordiaAction.handleAction">handleAction</a> for this action will be called.</p>
 <p><strong>Function</strong></p>
 <p>If the accessor is a function that returns true when provided with <code>userAction</code>, <code>msg</code>, and <code>client</code> then <a href="api#DiscordiaAction.handleAction">handleAction</a> for this action will be called.</p>
-<h3 id="response">Response</h3>
+<h2 id="response">Response</h2>
+<hr />
 <p>The response is how the Discordia framework responds to a user that tries to interact with the bot it creates. Once <a href="api#DiscordiaAction.handleAction">handleAction</a> is called it will determine how to respond to the user based on the type of the response. The <a href="api#DiscordiaAction.handleAction">handleAction</a> method is given three parameters:</p>
 <table>
 <thead>
@@ -97,7 +99,8 @@ BotName: @User, pong</code></pre><h2 id="usage">Usage</h2>
 <p>If the response is a string then <a href="https://discord.js.org/#/docs/main/stable/class/Message?scrollTo=reply">msg.reply</a> is called with response as the <code>content</code> parameter.</p>
 <p><strong>Function</strong></p>
 <p>If the response is a function then that function will be called with <code>msg</code>, <code>userArgs</code>, and <code>client</code> as parameters. If the function returns a string then <a href="https://discord.js.org/#/docs/main/stable/class/Message?scrollTo=reply">msg.reply</a> is called with the result of that function as the <code>content</code> parameter.</p>
-<h3 id="description">Description</h3>
+<h2 id="description">Description</h2>
+<hr />
 <p>Description is an optional parameter that must be a string used to enable a <code>help</code> (or <code>h</code>) action on the Discordia framework. By default the discordia framework will attempt to supply usage information to server members who ask the bot created by the Discordia framework for help.</p>
 <pre><code class="js">// Default Behavior
 `-------------------------
@@ -107,19 +110,21 @@ ${description}`</code></pre>
 <p>Accessor is formatted based on its type to show the available options (with "{Dynamic Accessor}" sent if the accessor is a function). The description is the exact contents of the description parameter given to the Discordia action constructor.</p>
 <p>If description is ommitted or set to <code>null</code> then the whole action will be left off when the the help action is triggered.</p>
 <p>The behavior of the help command can be overriden - see the <a href="api#DiscordiaFramework">Discordia Framework constructor</a>.</p>
-<h2 id="examples">Examples</h2>
+<h1 id="examples">Examples</h1>
 <hr />
-<h3 id="string-accessor-and-string-response">String Accessor and String Response</h3>
+<h2 id="string-accessor-and-string-response">String Accessor and String Response</h2>
+<hr />
 <pre><code class="js">const DiscordiaAction = require('@discordia/action');
 
 const pingAction = new DiscordiaAction('ping', 'pong');</code></pre>
 <pre><code># Conversation Example(s)
 
 User: @BotName ping
-BotName: @User, pong</code></pre><h3 id="array-accessor">Array Accessor</h3>
+BotName: @User, pong</code></pre><h2 id="array-accessor">Array Accessor</h2>
+<hr />
 <pre><code class="js">const DiscordiaAction = require('@discordia/action');
 
-const pingAction = new DiscordiaAction(['oof', 'ow', 'ouch'], 'rekt');</code></pre>
+const ouchAction = new DiscordiaAction(['oof', 'ow', 'ouch'], 'rekt');</code></pre>
 <pre><code># Conversation Example(s)
 
 User: @BotName oof
@@ -129,7 +134,8 @@ User: @BotName ow
 BotName: @User, rekt
 ---
 User: @BotName ouch
-BotName: @User, rekt</code></pre><h3 id="function-accessor">Function Accessor</h3>
+BotName: @User, rekt</code></pre><h2 id="function-accessor">Function Accessor</h2>
+<hr />
 <pre><code class="js">const DiscordiaAction = require('@discordia/action');
 
 const accessor = (userAction, msg, client) =&gt; {
@@ -138,21 +144,22 @@ const accessor = (userAction, msg, client) =&gt; {
   }
   return false;
 };
-const pingAction = new DiscordiaAction(accessor, 'delicious');</code></pre>
+const potatoAction = new DiscordiaAction(accessor, 'delicious');</code></pre>
 <pre><code># Conversation Example(s)
 
 User: @BotName Do you like potatoes?
-BotName: @User, delicious</code></pre><h3 id="function-response">Function Response</h3>
+BotName: @User, delicious</code></pre><h2 id="function-response">Function Response</h2>
+<hr />
 <pre><code class="js">const DiscordiaAction = require('@discordia/action');
 
-const response = (msg, userArgs, client) =&gt; {
+const response = (userArgs, msg, client) =&gt; {
   return `here is a joke for ${msg.author.username}: ${generateJoke()}`;
 };
-const pingAction = new DiscordiaAction('joke', response);</code></pre>
+const jokeAction = new DiscordiaAction('joke', response);</code></pre>
 <pre><code># Conversation Example(s)
 
 User: @BotName joke
-BotName: @User, here is a joke for User: {something funny}</code></pre><h2 id="testing">Testing</h2>
+BotName: @User, here is a joke for User: {something funny}</code></pre><h1 id="testing">Testing</h1>
 <hr />
 <p>🚧 Coming Soon! 🚧</p>
 </body></html>
