--- a/content/gs_start_your_bot.html
+++ b/content/gs_start_your_bot.html
@@ -5,6 +5,8 @@
 <h1 id="setting-up-your-bot">Setting Up Your Bot</h1>
 <hr />
 <pre><code class="js">// src/index.js //
+// Load your `.env` file so the values will be included in `process.env.DISCORD_TOKEN`
+require('dotenv').config();
 // Import Your Dependencies
 const DiscordiaFramework = require('@discordia/framework');
 const actions = require('./actions'); // This should be an empty array
@@ -14,18 +16,21 @@ const myBot = new DiscordiaFramework(process.env.DISCORD_TOKEN, actions);
 
 // Start Your Bot
 myBot.start();</code></pre>
-<p>The first two lines of the example above import things into this file. The first line imports the <code>@discordia/framework</code> module that we installed earlier and the second line imports the empty array we exported from <code>src/actions.js</code> earlier.</p>
-<p>The third line sets up your bot. The <code>DiscordiaFramework</code> class has two mandatory parameters - your discord bot token and an array of actions. Remember in the last guide where we told you to add the <code>start</code> script to your <code>package.json</code> (<code>"start": "DISCORD_TOKEN=$(cat .discord_token) node src/index.js"</code>)? That command will load your Discord token from the <code>.discord_token</code> file and set it as an environment variable you can access from <code>process.env</code>. This ensures that you do not need to include your token in your source code if you are using source control such as <code>git</code>.</p>
-<p>The fourth line actually starts your bot.</p>
+<p>The first line of the example above loads your <code>.env</code> file and sets all of the values in that file as environment variables. This is how we can load your discord token <strong><em>without including it in your source code</em></strong>.</p>
+<p>The next two lines of the example import dependencies into this file. The first line imports the <code>@discordia/framework</code> module that we installed earlier and the second line imports the empty array we exported from <code>src/actions.js</code>.</p>
+<p>The next line sets up your bot. The <code>DiscordiaFramework</code> class has two mandatory parameters - your discord bot token and an array of actions. Since we ran <code>dotenv</code> already you can get the <code>DISCORD_TOKEN</code> variable from <code>process.env</code>.</p>
+<p>The final line actually starts your bot.</p>
 <h1 id="--test-your-bot--">⚠️Test Your Bot⚠️</h1>
 <hr />
 <pre><code class="bash"># Start Your Bot
 npm start
 # Stop Your Bot (once you are done with this step)
 ctrl+c</code></pre>
-<p>At this point you should be able to send the bot a message and see a response.
-1) <code>@BotName h</code> or <code>@BotName help</code> should display a help message
-2) <code>@BotName action</code> should display a missing action message</p>
+<p>At this point you should be able to send the bot a message and see a response.</p>
+<ul>
+<li><code>@BotName h</code> or <code>@BotName help</code> should display a help message</li>
+<li><code>@BotName action</code> should display a missing action message</li>
+</ul>
 <p>TODO: INSERT IMAGE HERE SHOWING MESSAGE EXAMPLES</p>
 <h1 id="next">Next</h1>
 <hr />
