--- a/content/gs_write_an_action.html
+++ b/content/gs_write_an_action.html
@@ -124,9 +124,9 @@ const functionResponse = (userArgs, msg, framework) =&gt; {
 const jokeAction = new DiscordiaAction('joke', functionResponse, 'Responds to the user with a funny joke');
 
 // MAKE SURE TO EXPORT THE NEW ACTION //
-module.exports = [pingAction, arrayAccessorAction, functionAccessorAction];</code></pre>
+module.exports = [pingAction, arrayAccessorAction, functionAccessorAction, jokeAction];</code></pre>
 <p>The response can be a function. This is where you can make the most powerful actions - actions that leverage the whole Discord client object, actions that make API calls to inform responses, and pretty much anything else you can think of.</p>
-<h1 id="--test-your-bot---accessor-function--">⚠️Test Your Bot - Accessor Function⚠️</h1>
+<h1 id="--test-your-bot---response-function--">⚠️Test Your Bot - Response Function⚠️</h1>
 <hr />
 <pre><code class="bash"># Start Your Bot
 npm start
